<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icecrem_w"
    android:fillViewport="true"
    tools:context=".Fragments.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/icecrem"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="40dp"
                    android:text="Elon Musk"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mobileNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="+607846556767"
                    android:textColor="#C9C4C4"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/userName"
                    app:layout_constraintTop_toBottomOf="@+id/userName" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userProfile"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/wd"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/coins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="5000"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/userProfile"
                    app:layout_constraintStart_toStartOf="@+id/userProfile" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/coin"
                    app:layout_constraintBottom_toBottomOf="@+id/coins"
                    app:layout_constraintEnd_toStartOf="@+id/coins"
                    app:layout_constraintTop_toTopOf="@+id/coins" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/elon"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        app:columnCount="1"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:rowCount="1">


        <androidx.cardview.widget.CardView
            android:id="@+id/watchVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:background="#000000">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/video" />

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imageView"
                    android:layout_marginStart="16dp"
                    android:text="@string/watch_video"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imageView"
                    android:layout_below="@id/textViewTitle"
                    android:layout_marginStart="16dp"
                    android:text="@string/dely_ads"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/scratchCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:background="#000000">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/cathIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/card" />

                <TextView
                    android:id="@+id/cagtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/cathIcon"
                    android:layout_marginStart="16dp"
                    android:text="@string/scratch_card"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/texSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/cathIcon"
                    android:layout_below="@id/cagtName"
                    android:layout_marginStart="16dp"
                    android:text="@string/scratch_card_with_a_delay_limit_of_5_between_each_scratch"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/inviteFd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:background="#000000">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/ceatIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/guess" />

                <TextView
                    android:id="@+id/gcatName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ceatIcon"
                    android:layout_marginStart="16dp"
                    android:text="@string/refer_and_earn"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ceatIcon"
                    android:layout_below="@id/gcatName"
                    android:layout_marginStart="16dp"
                    android:text="@string/your_friend_gets_100_coins_on_sign_up_nand_you_get_100_coins_too_every_time"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>




    </androidx.gridlayout.widget.GridLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_banner_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.ads.AdView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>